--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,62 @@
+version: "3.9"
+
 services:
   api:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: sentineliq_api
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000
+    command: >
+      uvicorn app.main:app
+      --host 0.0.0.0
+      --port 8000
     ports:
       - "8000:8000"
     env_file:
       - .env
     depends_on:
-      - postgres
-      - redis
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    restart: unless-stopped
+    networks:
+      - backend
 
   postgres:
-    image: postgres:15
+    image: postgres:15-alpine
     container_name: sentineliq_postgres
     environment:
       POSTGRES_USER: sentineliq
       POSTGRES_PASSWORD: sentineliq
       POSTGRES_DB: sentineliq
-    ports:
-      - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
+    networks:
+      - backend
 
   redis:
-    image: redis:7
+    image: redis:7-alpine
     container_name: sentineliq_redis
-    ports:
-      - "6379:6379"
+    command: redis-server --save 60 1 --loglevel warning
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+    restart: unless-stopped
+    networks:
+      - backend
 
 volumes:
   pgdata:
+
+networks:
+  backend:
+    driver: bridge
