--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,11 +12,15 @@ services:
       - "8000:8000"
     env_file:
       - .env
+    environment:
+      SMTP_HOST: mailhog
     depends_on:
       postgres:
         condition: service_healthy
       redis:
         condition: service_healthy
+      mailhog:
+        condition: service_started
     restart: unless-stopped
     networks:
       - backend
