--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,8 +66,135 @@ services:
     networks:
       - backend
 
+  # ============================================================================
+  # MILESTONE 1 & 2: Event-Driven Risk Engine Infrastructure
+  # ============================================================================
+
+  # MinIO - S3-compatible object storage for immutable audit logs
+  minio:
+    image: minio/minio:latest
+    container_name: sentineliq_minio
+    command: server /data --console-address ":9001"
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    ports:
+      - "9000:9000"  # S3 API
+      - "9001:9001"  # Web console
+    volumes:
+      - minio_data:/data
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
+    networks:
+      - backend
+
+  # Prometheus - Metrics collection for observability
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: sentineliq_prometheus
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--storage.tsdb.path=/prometheus"
+      - "--storage.tsdb.retention.time=30d"
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - prometheus_data:/prometheus
+    restart: unless-stopped
+    networks:
+      - backend
+
+  # Grafana - Dashboards and visualization
+  grafana:
+    image: grafana/grafana:latest
+    container_name: sentineliq_grafana
+    environment:
+      GF_SECURITY_ADMIN_USER: admin
+      GF_SECURITY_ADMIN_PASSWORD: admin
+      GF_INSTALL_PLUGINS: grafana-piechart-panel
+    ports:
+      - "3001:3000"
+    volumes:
+      - ./monitoring/grafana/provisioning:/etc/grafana/provisioning:ro
+      - grafana_data:/var/lib/grafana
+    depends_on:
+      - prometheus
+    restart: unless-stopped
+    networks:
+      - backend
+
+  # Loki - Log aggregation (like Splunk, but free)
+  loki:
+    image: grafana/loki:latest
+    container_name: sentineliq_loki
+    ports:
+      - "3100:3100"
+    command: -config.file=/etc/loki/local-config.yml
+    volumes:
+      - ./monitoring/loki-config.yml:/etc/loki/local-config.yml:ro
+      - loki_data:/loki
+    restart: unless-stopped
+    networks:
+      - backend
+
+  # HashiCorp Vault - Secret management
+  vault:
+    image: vault:latest
+    container_name: sentineliq_vault
+    environment:
+      VAULT_DEV_ROOT_TOKEN_ID: devroot
+      VAULT_DEV_LISTEN_ADDRESS: 0.0.0.0:8200
+    command: server -dev
+    ports:
+      - "8200:8200"
+    volumes:
+      - vault_data:/vault/data
+    cap_add:
+      - IPC_LOCK
+    restart: unless-stopped
+    networks:
+      - backend
+
+  # Redis Exporter - Metrics for Redis
+  redis-exporter:
+    image: oliver006/redis_exporter:latest
+    container_name: sentineliq_redis_exporter
+    environment:
+      REDIS_ADDR: redis:6379
+    ports:
+      - "9121:9121"
+    depends_on:
+      - redis
+    restart: unless-stopped
+    networks:
+      - backend
+
+  # Postgres Exporter - Metrics for PostgreSQL
+  postgres-exporter:
+    image: prometheuscommunity/postgres-exporter:latest
+    container_name: sentineliq_postgres_exporter
+    environment:
+      DATA_SOURCE_NAME: "postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?sslmode=disable"
+    ports:
+      - "9187:9187"
+    depends_on:
+      - postgres
+    restart: unless-stopped
+    networks:
+      - backend
+
 volumes:
   pgdata:
+  minio_data:
+  prometheus_data:
+  grafana_data:
+  loki_data:
+  vault_data:
 
 networks:
   backend:
