--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -25,7 +25,7 @@ scrape_configs:
   
   - job_name: "sentineliq-api"
     static_configs:
-      - targets: ["api:8000"]
+      - targets: ["sentineliq_api:8000"]
     metrics_path: "/metrics"
     scrape_interval: 10s
     scrape_timeout: 5s
