--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ passlib[bcrypt]==1.7.4
 bcrypt==3.2.2
 redis==5.0.3
 prometheus-client==0.20.0
+prometheus-fastapi-instrumentator==6.1.0
 pydantic[email]==2.6.4
 jinja2==3.1.2
 
