--- a/monitoring/loki-config.yml
+++ b/monitoring/loki-config.yml
@@ -35,6 +35,7 @@ storage_config:
 limits_config:
   reject_old_samples: true
   reject_old_samples_max_age: 168h
+  allow_structured_metadata: false
 
 table_manager:
   retention_deletes_enabled: false
