--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,35 @@
 services:
+  frontend:
+    build:
+      context: ./sentineliq-ui
+      dockerfile: Dockerfile
+      cache_from:
+        - sentineliq-frontend:latest
+    container_name: sentineliq_frontend
+    ports:
+      - "5173:5173"
+    environment:
+      VITE_API_BASE_URL: http://localhost:8000
+      VITE_API_TIMEOUT: 30000
+      VITE_ENABLE_ANALYTICS: "true"
+      VITE_ENABLE_DEBUG_MODE: "false"
+      VITE_LOG_LEVEL: info
+    restart: unless-stopped
+    networks:
+      - backend
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5173/health"]
+      interval: 15s
+      timeout: 5s
+      retries: 3
+      start_period: 30s
+    security_opt:
+      - no-new-privileges:true
+    cap_drop:
+      - ALL
+    cap_add:
+      - NET_BIND_SERVICE
+
   api:
     build:
       context: .
