--- a/sentineliq-ui/package.json
+++ b/sentineliq-ui/package.json
@@ -21,8 +21,7 @@
     "cytoscape": "^3.28.0",
     "react-cytoscapejs": "^2.0.0",
     "recharts": "^2.10.0",
-    "monaco-editor": "^0.50.0",
-    "react-monaco-editor": "^0.63.0",
+    "@monaco-editor/react": "^4.6.0",
     "jspdf": "^2.5.0",
     "html2canvas": "^1.4.0",
     "date-fns": "^2.30.0"
@@ -36,6 +35,7 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "@types/cytoscape": "^3.19.0",
-    "classnames": "^2.3.0"
+    "classnames": "^2.3.0",
+    "eslint": "^8.55.0"
   }
 }
