--- a/sentineliq-ui/package.json
+++ b/sentineliq-ui/package.json
@@ -35,6 +35,7 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "@types/cytoscape": "^3.19.0",
+    "@types/node": "^20.10.0",
     "classnames": "^2.3.0",
     "eslint": "^8.55.0"
   }
