--- a/sentineliq-ui-old/nginx.conf
+++ b/sentineliq-ui-old/nginx.conf
@@ -101,28 +101,40 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
+            proxy_buffering off;
         }
 
-        # Static assets (versioned)
-        location ~* ^/assets/.*\.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        # Static assets with long cache
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            limit_req zone=general_limit burst=50 nodelay;
             expires 1y;
             add_header Cache-Control "public, immutable";
             access_log off;
         }
 
-        # SPA routing: try files, fall back to index.html for client-side routing
+        # SPA fallback: route all requests to index.html
         location / {
             limit_req zone=general_limit burst=30 nodelay;
             try_files $uri $uri/ /index.html;
             expires -1;
-            add_header Cache-Control "public, max-age=0, must-revalidate";
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
         }
 
-        # Deny access to hidden files
+        # Deny access to sensitive files
         location ~ /\. {
             deny all;
             access_log off;
             log_not_found off;
         }
+
+        location ~ ~$ {
+            deny all;
+            access_log off;
+            log_not_found off;
+        }
+
+        # Error pages
+        error_page 404 /index.html;
+        error_page 500 502 503 504 /index.html;
     }
 }
