--- a/sentineliq-ui-old/package.json
+++ b/sentineliq-ui-old/package.json
@@ -3,13 +3,10 @@
   "private": true,
   "version": "0.1.0",
   "type": "module",
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
-  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -18,7 +15,15 @@
     "react-router-dom": "^6.20.0",
     "axios": "^1.6.0",
     "zustand": "^4.4.0",
+    "tailwindcss": "^3.3.0",
+    "@headlessui/react": "^1.7.0",
     "@tremor/react": "^3.13.0",
+    "cytoscape": "^3.28.0",
+    "react-cytoscapejs": "^2.0.0",
+    "recharts": "^2.10.0",
+    "@monaco-editor/react": "^4.6.0",
+    "jspdf": "^2.5.0",
+    "html2canvas": "^1.4.0",
     "date-fns": "^2.30.0"
   },
   "devDependencies": {
@@ -27,9 +32,11 @@
     "@vitejs/plugin-react": "^4.2.0",
     "vite": "^5.0.0",
     "typescript": "^5.3.0",
-    "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
-    "@types/node": "^20.10.0"
+    "@types/cytoscape": "^3.19.0",
+    "@types/node": "^20.10.0",
+    "classnames": "^2.3.0",
+    "eslint": "^8.55.0"
   }
 }
