--- a/sentineliq-ui/nginx.conf
+++ b/sentineliq-ui/nginx.conf
@@ -64,10 +64,9 @@ http {
     limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
     limit_req_zone $binary_remote_addr zone=general_limit:10m rate=30r/s;
 
-    upstream api {
-        server api:8000;
-        keepalive 32;
-    }
+    # DNS resolver for dynamic upstream resolution
+    resolver 127.0.0.11 valid=30s ipv6=off;
+    resolver_timeout 5s;
 
     server {
         listen 5173 default_server;
@@ -88,11 +87,14 @@ http {
             add_header Content-Type text/plain;
         }
 
-        # API proxy with rate limiting
+        # API proxy with rate limiting (dynamic upstream resolution)
         location /api/ {
             limit_req zone=api_limit burst=20 nodelay;
             
-            proxy_pass http://api;
+            # Use variable to force runtime DNS resolution
+            set $api_upstream http://api:8000;
+            proxy_pass $api_upstream;
+            
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
