--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,20 +3,25 @@ services:
     build:
       context: ./sentineliq-ui
       dockerfile: Dockerfile
+      target: development
     container_name: sentineliq_frontend
     ports:
       - "5173:5173"
     environment:
       VITE_API_BASE_URL: http://localhost:8000
+      VITE_WS_URL: ws://localhost:8000/ws
       VITE_API_TIMEOUT: 30000
       VITE_ENABLE_ANALYTICS: "true"
       VITE_ENABLE_DEBUG_MODE: "false"
       VITE_LOG_LEVEL: info
+    volumes:
+      - ./sentineliq-ui:/app
+      - /app/node_modules
     restart: unless-stopped
     networks:
       - backend
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5173/health"]
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:5173/"]
       interval: 15s
       timeout: 5s
       retries: 3
