--- a/sentineliq-ui/.env.example
+++ b/sentineliq-ui/.env.example
@@ -1,3 +1,13 @@
-VITE_API_BASE_URL=http://localhost:8000/api
+# API Configuration
+VITE_API_BASE_URL=http://localhost:8000
 VITE_API_TIMEOUT=30000
+
+# WebSocket Configuration
+VITE_WS_URL=ws://localhost:8000/ws
+
+# Feature Flags
+VITE_ENABLE_ANALYTICS=true
+VITE_ENABLE_DEBUG_MODE=false
+
+# Logging
 VITE_LOG_LEVEL=info
